--- a/styles/global.css
+++ b/styles/global.css
@@ -57,7 +57,7 @@
 
   --gray: #252729;
   --secondary-color: #8a8f98;
-  --sidebar: #0e0e10;
+  --sidebar:url('../public/bg.png');
   --brand: #702ec2;
   --brand-lighter: #d6ccee;
   --brand-light: #8465cb;
@@ -104,11 +104,13 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  background-image: url('../public/Africanbg.png');
 }
 html,
 body {
-  color: var(--foreground);
-  background-color: var(--accents-8);
+  /* color: var(--foreground);
+ background-color:var(--accents-8)*/;
+  background-image: url('../public/Africanbg.png');
 }
 ::selection {
   background-color: #0070f3;
